--- a/index.html
+++ b/index.html
@@ -552,9 +552,9 @@
                     
                     <!-- Right Side: Contact Information -->
                     <div class="contact-info">
-                        <p><strong>Phone:</strong> +123 456 7890</p>
-                        <p><strong>Location:</strong> City, Country</p>
-                        <p><strong>Email:</strong> example@email.com</p>
+                        <p><strong>Phone:</strong> +91 9652769369</p>
+                        <p><strong>Location:</strong> Hyderrbad,India</p>
+                        <p><strong>Email:</strong> akashvarmagriet@email.com</p>
                     </div>
                 </div>
             </section>
