--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
                     <div class="contact-info">
                         <p><strong>Phone:</strong> +91 9652769369</p>
                         <p><strong>Location:</strong> Hyderrbad,India</p>
-                        <p><strong>Email:</strong> akashvarmagriet@email.com</p>
+                        <p><strong>Email:</strong> akashvarmagriet@gmail.com</p>
                     </div>
                 </div>
             </section>
